app_api/k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-todo-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api
  namespace: fastapi-todo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: backend-api
          image: hungtran1266/fast-api:bd2761dd82b08a76b780ded3c5b2fd22de24f13e
          resources:
            requests:
              cpu: "256m"
              memory: "512Mi"
            limits:
              memory: "1024Mi"
              cpu: "512m"
          ports:
            - containerPort: 80
              name: backend-api
