app_api/k8s/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-todo-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api
  namespace: fastapi-todo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: backend-api
          image: hungtran1266/fast-api:bd2761dd82b08a76b780ded3c5b2fd22de24f13e
          resources:
            requests:
              cpu: "256m"
              memory: "512Mi"
            limits:
              memory: "1024Mi"
              cpu: "512m"
          ports:
            - containerPort: 8000
              name: backend-api
---
apiVersion: v1
kind: Service
metadata:
  name: svc-backend-api
  namespace: fastapi-todo-dev
spec:
  selector:
    app: backend-api
  ports:
    - port: 80 # egress port
      targetPort: 8000 # ingress port, containerPort
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: fastapi-todo-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    external-dns.alpha.kubernetes.io/hostname: api.hungdevops.org
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    cert-manager.io/cluster-issuer: "prod-issuer"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
spec:
  ingressClassName: nginx
  rules:
    - host: api.hungdevops.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: svc-backend-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.hungdevops.org
      secretName: app-tls
